# diagram-generator

./: CMakeLists.txt  README.md  main.cpp
cmake/: FindCairo.cmake
example/: example.xml
source/: cli.cpp  main.cpp  sdg.cpp  sdg.h  xmlLoader.cpp  xmlLoader.h
